; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_macrotab.c_macro_lookup_definition.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_macrotab.c_macro_lookup_definition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.macro_definition = type { i32 }
%struct.macro_source_file = type { i32 }
%struct.TYPE_3__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.macro_definition* @macro_lookup_definition(%struct.macro_source_file* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.macro_definition*, align 8
  %5 = alloca %struct.macro_source_file*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_3__*, align 8
  store %struct.macro_source_file* %0, %struct.macro_source_file** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %9 = load i8*, i8** %7, align 8
  %10 = load %struct.macro_source_file*, %struct.macro_source_file** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call %struct.TYPE_3__* @find_definition(i8* %9, %struct.macro_source_file* %10, i32 %11)
  store %struct.TYPE_3__* %12, %struct.TYPE_3__** %8, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %14 = icmp ne %struct.TYPE_3__* %13, null
  br i1 %14, label %15, label %20

15:                                               ; preds = %3
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = inttoptr i64 %18 to %struct.macro_definition*
  store %struct.macro_definition* %19, %struct.macro_definition** %4, align 8
  br label %21

20:                                               ; preds = %3
  store %struct.macro_definition* null, %struct.macro_definition** %4, align 8
  br label %21

21:                                               ; preds = %20, %15
  %22 = load %struct.macro_definition*, %struct.macro_definition** %4, align 8
  ret %struct.macro_definition* %22
}

declare dso_local %struct.TYPE_3__* @find_definition(i8*, %struct.macro_source_file*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
